# zk-proving-systems

./: Cargo.toml  README.md
artifacts/: MatrixPower.r1cs  pow.r1cs  pow.wasm
circom/: hardhat.config.ts
circom/test/: Matrix.test.ts
groth16/: Cargo.toml
groth16/src/: matrix.rs  multiply.rs
scripts/: artifacts.sh
sparta/: Cargo.toml  data.json
sparta/src/: matrix.rs  multiply.rs
