[workspace]
members = [
    "groth16",
    "sparta"
]

[workspace.dependencies]
rand = "0.9.0"
ark-groth16 = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-crypto-primitives = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.1", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", default-features = false, features = [
    "curve",
] }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = [
    "curve",
] }
ark-snark = { version = "0.5.0", default-features = false }
spartan = { version = "0.9.0", default-features = false }
merlin = { version = "3", default-features = false }
