[workspace]
members = [
    "groth16",
    "sparta"
]

[workspace.dependencies]
rand = "0.9.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-relations = "0.5.0"
ark-std = "0.5.0"
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-snark = "0.5.0"
ark-circom = "0.5.0"
spartan = "0.9.0"
merlin = "3"
anyhow = "1.0.96"
tokio = "1.43.0"