[workspace]
members = [
    "groth16",
    "sparta"
]

[workspace.dependencies]
rand = "0.8.5"
anyhow = "1.0.96"
tokio = "1.43.0"

ark-groth16 = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-crypto-primitives = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", default-features = false, features = [
    "curve",
] }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = [
    "curve",
] }
ark-snark = { version = "0.5.0", default-features = false }
ark-circom = { version = "0.5.0" }

spartan = "0.9.0"
merlin = "3"
curve25519-dalek = "4.1.3"
r1cs-file = "0.3.0"
wtns-file = "0.1.5"
