[package]
name = "groth16"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
ark-bn254 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-snark = { workspace = true }
ark-circom = { workspace = true }
