[package]
name = "sparta"
version = "0.1.0"
edition = "2021"

[dependencies]
spartan = { workspace = true }
merlin = { workspace = true }
anyhow = { workspace = true }
curve25519-dalek = "4.1.3"
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde_json = "1.0.140"
