[package]
name = "sparta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
ark-spartan = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
merlin = { workspace = true }
curve25519-dalek = { workspace = true }
r1cs-file = { workspace = true }
wtns-file = { workspace = true }
